Minor fixes suggested by eclipse