@@ -5,6 +5,6 @@ public class PtsComparator implements Comparator<HighScore> {
 
     @Override
     public int compare(HighScore a, HighScore b) {
-        return (new Integer(a.getPts())).compareTo(b.getPts());
+        return (Integer.valueOf(a.getPts())).compareTo(b.getPts());
     }
 }
