@@ -5,6 +5,6 @@ public class SnakeDataComparator implements Comparator<int[]> {
 
     @Override
     public int compare(int[] a, int[] b) {
-        return (new Integer(a[2]).compareTo(b[2]));
+        return (Integer.valueOf(a[2]).compareTo(b[2]));
     }
 }
